# packaging_srund_test

./: .gitignore  LICENSE  README.md  pyproject.toml
src/example_package_srund/: main.py
