[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_srund"
version = "0.0.1"
authors = [
  { name="Simon Rundstedt", email="simon.rundstedt@gmail.com" },
]
description = "A small example package following the packaging guide."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/srund/packaging_srund_test"
"Bug Tracker" = "https://github.com/srund/packaging_srund_test/issues"
